--- a/src/main/resources/com/example/ltulibrary/search.fxml
+++ b/src/main/resources/com/example/ltulibrary/search.fxml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.Pane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ltulibrary.registerController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" style="-fx-background-color: #263F70;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ltulibrary.searchController">
     <children>
-        <BorderPane prefHeight="400.0" prefWidth="249.0" style="-fx-background-color: #263F70;">
-            <top>
-                <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Ltu Library" BorderPane.alignment="CENTER">
-                    <font>
-                        <Font size="24.0" />
-                    </font>
-                </Text>
-            </top>
-        </BorderPane>
-        <ButtonBar layoutX="300.0" layoutY="77.0" prefHeight="40.0" prefWidth="200.0" />
-        <TextField layoutX="320.0" layoutY="35.0" text="search..." />
-        <TextField layoutX="309.0" layoutY="72.0" prefHeight="305.0" prefWidth="262.0" />
+        <TableView fx:id="booktableview" layoutY="27.0" prefHeight="344.0" prefWidth="800.0">
+            <columns>
+                <TableColumn fx:id="bookname" prefWidth="125.7142333984375" text="Namn" />
+                <TableColumn fx:id="bookyear" prefWidth="74.2857666015625" text="Year" />
+                <TableColumn fx:id="bookgenre" prefWidth="100.0" text="Genre" />
+                <TableColumn fx:id="bookcategory" prefWidth="100.0" text="Categorys" />
+                <TableColumn fx:id="bookautor" prefWidth="100.0" text="Autor" />
+                <TableColumn fx:id="bookshelf" prefWidth="100.0" text="Shelf" />
+                <TableColumn fx:id="bookamount" prefWidth="100.0" text="Amount" />
+            <TableColumn fx:id="ISBN" prefWidth="100.0" text="ISBN" />
+            </columns>
+        </TableView>
+        <Label layoutX="50.0" layoutY="6.0" text="Search" textFill="#fdfdfd" />
+        <TextField fx:id="Keywordsbooks" layoutX="86.0" layoutY="2.0" prefHeight="17.0" prefWidth="132.0" promptText="KEY WORDS" />
+        <Button fx:id="Addbook" layoutX="635.0" layoutY="371.0" mnemonicParsing="false" onAction="#AddbookAction" prefHeight="25.0" prefWidth="72.0" text="Addbook" />
+        <Button fx:id="Cancelsearch" layoutX="572.0" layoutY="371.0" mnemonicParsing="false" text="Cancel" />
+      <Button fx:id="checkout" layoutX="719.0" layoutY="371.0" mnemonicParsing="false" text="Check out" />
     </children>
-</AnchorPane>
+</Pane>
