--- a/src/main/resources/com/example/ltulibrary/startPage.fxml
+++ b/src/main/resources/com/example/ltulibrary/startPage.fxml
@@ -10,7 +10,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ltulibrary.startPageController">
     <children>
         <BorderPane prefHeight="400.0" prefWidth="279.0" style="-fx-background-color: #263F70;" />
-        <Button fx:id="searchButton" layoutX="327.0" layoutY="76.0" mnemonicParsing="false" onAction="#onSearch" prefHeight="51.0" prefWidth="138.0" text="Search" textFill="#111111">
+        <Button fx:id="searchButton" layoutX="327.0" layoutY="76.0" mnemonicParsing="false" onAction="#searchbuttonAction" prefHeight="51.0" prefWidth="138.0" text="Search" textFill="#111111">
             <font>
                 <Font name="System Bold" size="13.0" />
             </font>
