--- a/src/main/resources/com/example/ltulibrary/search.fxml
+++ b/src/main/resources/com/example/ltulibrary/search.fxml
@@ -2,29 +2,62 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" style="-fx-background-color: #263F70;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ltulibrary.searchController">
     <children>
-        <TableView fx:id="booktableview" layoutY="27.0" prefHeight="344.0" prefWidth="800.0">
-            <columns>
-                <TableColumn fx:id="bookname" prefWidth="125.7142333984375" text="Namn" />
-                <TableColumn fx:id="bookyear" prefWidth="74.2857666015625" text="Year" />
-                <TableColumn fx:id="bookgenre" prefWidth="100.0" text="Genre" />
-                <TableColumn fx:id="bookcategory" prefWidth="100.0" text="Categorys" />
-                <TableColumn fx:id="bookautor" prefWidth="100.0" text="Autor" />
-                <TableColumn fx:id="bookshelf" prefWidth="100.0" text="Shelf" />
-                <TableColumn fx:id="bookamount" prefWidth="100.0" text="Amount" />
-            <TableColumn fx:id="ISBN" prefWidth="100.0" text="ISBN" />
-            </columns>
-        </TableView>
         <Label layoutX="50.0" layoutY="6.0" text="Search" textFill="#fdfdfd" />
-        <TextField fx:id="Keywordsbooks" layoutX="86.0" layoutY="2.0" prefHeight="17.0" prefWidth="132.0" promptText="KEY WORDS" />
-        <Button fx:id="Addbook" layoutX="635.0" layoutY="371.0" mnemonicParsing="false" onAction="#AddbookAction" prefHeight="25.0" prefWidth="72.0" text="Addbook" />
-        <Button fx:id="Cancelsearch" layoutX="572.0" layoutY="371.0" mnemonicParsing="false" text="Cancel" />
-      <Button fx:id="checkout" layoutX="719.0" layoutY="371.0" mnemonicParsing="false" text="Check out" />
+        <TextField fx:id="keywordsField" layoutX="101.0" layoutY="2.0" prefHeight="17.0" prefWidth="132.0" promptText="KEY WORDS" />
+        <Button fx:id="Addbook" layoutX="635.0" layoutY="371.0" mnemonicParsing="false" onAction="#AddbookAction" prefHeight="25.0" prefWidth="72.0" text="Add" />
+        <Button fx:id="Cancelsearch" layoutX="572.0" layoutY="371.0" mnemonicParsing="false" onAction="#Cancelsearch" text="Cancel" />
+          <Button fx:id="checkout" layoutX="719.0" layoutY="371.0" mnemonicParsing="false" onAction="#checkout" text="Check out" />
+      <TabPane layoutY="27.0" prefHeight="337.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab fx:id="books" text="Books">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="322.0" prefWidth="700.0">
+                     <children>
+                        <TableView fx:id="bookTableView" prefHeight="309.0" prefWidth="800.0">
+                           <columns>
+                              <TableColumn fx:id="bookNameColumn" prefWidth="125.7142333984375" text="Namn" />
+                              <TableColumn fx:id="bookYearColumn" prefWidth="74.2857666015625" text="Year" />
+                              <TableColumn fx:id="bookGenreColumn" prefWidth="100.0" text="Genre" />
+                              <TableColumn fx:id="bookCategoryColumn" prefWidth="100.0" text="Categorys" />
+                              <TableColumn fx:id="bookAuthorColumn" prefWidth="100.0" text="Autor" />
+                              <TableColumn fx:id="bookCopiesColumn" prefWidth="100.0" text="Shelf" />
+                              <TableColumn fx:id="bookShelfColumn" prefWidth="100.0" text="Amount" />
+                              <TableColumn fx:id="bookISBNColumn" prefWidth="100.0" text="ISBN" />
+                           </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab fx:id="dvds" text="DVDs">
+            <content>
+              <AnchorPane layoutX="800.0" layoutY="800.0" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="700.0">
+                     <children>
+                          <TableView fx:id="dvdTableView" prefHeight="344.0" prefWidth="800.0">
+                              <columns>
+                                  <TableColumn fx:id="dvdNameColumn" prefWidth="173.14290726184845" text="Namn" />
+                                  <TableColumn fx:id="dvdGenreColumn" prefWidth="119.42854309082031" text="Genre" />
+                                  <TableColumn fx:id="dvdDirectorColumn" prefWidth="148.57147216796875" text="Director" />
+                                  <TableColumn fx:id="dvdAgeRatingColumn" prefWidth="100.57147216796875" text="age restriction" />
+                                  <TableColumn fx:id="dvdCopiesColumn" prefWidth="92.57135009765625" text="amount" />
+                                  <TableColumn fx:id="dvdShelfColumn" prefWidth="165.1429443359375" text="Shelf" />
+                              </columns>
+                          </TableView>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
     </children>
 </Pane>
