--- a/src/main/resources/com/example/ltulibrary/adminPage.fxml
+++ b/src/main/resources/com/example/ltulibrary/adminPage.fxml
@@ -16,12 +16,12 @@
                </font>
             </Text>
          </top></BorderPane>
-      <Button fx:id="bookButton" layoutX="333.0" layoutY="73.0" mnemonicParsing="false" onAction="#onBook" prefHeight="56.0" prefWidth="129.0" style="-fx-background-color: green;" text="Book">
+      <Button fx:id="bookButton" layoutX="261.0" layoutY="73.0" mnemonicParsing="false" onAction="#onBook" prefHeight="56.0" prefWidth="129.0" style="-fx-background-color: green;" text="Book">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Button>
-      <Button fx:id="DvdButton" layoutX="333.0" layoutY="172.0" mnemonicParsing="false" onAction="#onDvd" prefHeight="56.0" prefWidth="129.0" style="-fx-background-color: green;" text="DVD">
+      <Button fx:id="DvdButton" layoutX="414.0" layoutY="73.0" mnemonicParsing="false" onAction="#onDvd" prefHeight="56.0" prefWidth="129.0" style="-fx-background-color: green;" text="DVD">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -32,5 +32,7 @@
             <Font size="18.0" />
          </font>
       </Text>
+      <Text layoutX="378.0" layoutY="182.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Försensde lån" />
+      <Button fx:id="handleLoanButton" layoutX="363.0" layoutY="200.0" mnemonicParsing="false" onAction="#onHandleLoan" text="Handle loan" />
    </children>
 </AnchorPane>
