--- a/src/main/resources/com/example/ltulibrary/register.fxml
+++ b/src/main/resources/com/example/ltulibrary/register.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ltulibrary.registerController">
     <children>
@@ -18,8 +19,16 @@
                 </Text>
             </top>
         </BorderPane>
-        <TextField layoutX="317.0" layoutY="66.0" text="First Name..." />
-        <TextField layoutX="316.0" layoutY="114.0" text="Last Name..." />
-        <TextField layoutX="316.0" layoutY="165.0" text="Phone Number..." />
+        <TextField fx:id="firstNameTextField" layoutX="317.0" layoutY="47.0" promptText="First Name..." />
+        <TextField fx:id="lastNameTextField" layoutX="316.0" layoutY="83.0" promptText="Last Name..." />
+        <PasswordField fx:id="passwordField" layoutX="317.0" layoutY="332.0" promptText="Password..." />
+        <Button fx:id="createButton" layoutX="499.0" layoutY="223.0" mnemonicParsing="false" onAction="#onCreateButton" text="Create" />
+        <TextField fx:id="mainTextField" layoutX="315.0" layoutY="120.0" promptText="Email adress.." />
+        <TextField fx:id="phoneTextField" layoutX="315.0" layoutY="153.0" promptText="phone number..." />
+        <TextField fx:id="ageTextField" layoutX="316.0" layoutY="223.0" promptText="Age..." />
+        <TextField fx:id="kundTypTextField" layoutX="317.0" layoutY="259.0" promptText="kundtyp..." />
+        <TextField fx:id="usernameTextField" layoutX="317.0" layoutY="295.0" promptText="Username..." />
+        <TextField fx:id="adressTextField" layoutX="315.0" layoutY="188.0" promptText="Adress..." />
+        <Button fx:id="returnToLoginButton" layoutX="488.0" layoutY="273.0" mnemonicParsing="false" onAction="#onReturnToLogin" text="Return to login" />
     </children>
 </AnchorPane>
