--- a/src/main/resources/com/example/ltulibrary/returnBook.fxml
+++ b/src/main/resources/com/example/ltulibrary/returnBook.fxml
@@ -20,5 +20,6 @@
         </BorderPane>
         <Button fx:id="returnBookComfirmButton" layoutX="365.0" layoutY="215.0" mnemonicParsing="false" onAction="#onReturnBookComfirm" prefHeight="52.0" prefWidth="94.0" text="Return Book" />
         <TextField fx:id="BarcodeBookButton" layoutX="300.0" layoutY="61.0" promptText="Barcode..." />
+      <Button fx:id="backbutton" layoutX="365.0" layoutY="278.0" mnemonicParsing="false" onAction="#onBack" prefHeight="52.0" prefWidth="94.0" text="Back" />
     </children>
 </AnchorPane>
