--- a/src/main/resources/com/example/ltulibrary/returnDVD.fxml
+++ b/src/main/resources/com/example/ltulibrary/returnDVD.fxml
@@ -20,5 +20,6 @@
         </BorderPane>
         <Button fx:id="returnDvdComfirmButton" layoutX="365.0" layoutY="215.0" mnemonicParsing="false" onAction="#onReturnDvdConfirm" prefHeight="52.0" prefWidth="94.0" text="Return Dvd" />
         <TextField fx:id="BarcodeDvdButton" layoutX="300.0" layoutY="61.0" promptText="Barcode..." />
+        <Button fx:id="backbutton" layoutX="365.0" layoutY="278.0" mnemonicParsing="false" onAction="#onBack" prefHeight="52.0" prefWidth="94.0" text="Back" />
     </children>
 </AnchorPane>
